// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders 1`] = `
<React.Fragment>
  <div
    className="input-group"
  >
    <input
      className="input-text"
      disabled={false}
      id="test-input"
      name=""
      onBlur={null}
      onChange={[Function]}
      placeholder=""
      type="text"
      value="test"
    />
  </div>
</React.Fragment>
`;

exports[`TextInput renders the text input with a checkmark at end when input field is valid and inputDidChange is true 1`] = `
<React.Fragment>
  <div
    className="input-group"
  >
    <input
      className="input-text"
      disabled={false}
      id="test-input"
      name=""
      onBlur={null}
      onChange={[Function]}
      placeholder=""
      type="text"
      value="hello"
    />
    <label
      className="input-label"
      htmlFor="test-input"
    >
      Text
    </label>
    <label
      className="checkmark-label"
    />
  </div>
</React.Fragment>
`;

exports[`TextInput renders the text input with a label when focused by setting a value 1`] = `
<React.Fragment>
  <div
    className="input-group"
  >
    <input
      className="input-text"
      disabled={false}
      id="test-input"
      name=""
      onBlur={null}
      onChange={[Function]}
      placeholder=""
      type="text"
      value=""
    />
    <label
      className="input-label"
      htmlFor="test-input"
    >
      Text
    </label>
  </div>
</React.Fragment>
`;
